@@ -2,6 +2,10 @@
 2011-07-18  Aki Sasaki  <aki@mozilla.com>
 * mozharness/scripts/mozmill_updates.py:
     Added --create-virtualenv action. Not sure if this is useful or needed, but I was asked why I didn't, so here it is.
+    Added error checking + report.json parsing.
+
+* mozharness/base/script.py (run):
+    Exit self.return_code. Initialize in __init__.
 
 2011-07-15  Aki Sasaki  <aki@mozilla.com>
 * mozharness/scripts/mozmill_updates.py:
